# rio

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
src/: io.rs  ip.rs  lib.rs  libc.rs  liburing.rs  op.rs  probe.rs  time.rs
src/ip/: tcp.rs
src/ip/tcp/: tls.rs
src/liburing/: lib.c
tests/: ca.key  foreign_futures.rs  ioc.rs  make-ca.bash  post.rs  post_leak_tests.rs  server.crt  server.csr  tcp.rs  timer.rs  timer_leak_tests.rs  timer_stress_tests.rs  tls.rs
tests/ca/: ca.crt  server.key
