[package]
authors = ["Christian Mazakas <christian.mazakas@gmail.com>"]
categories = ["io_uring", "i/o", "concurrency", "async"]
description = "Concurrent runtime written against liburing"
name = "fiona"
repository = "https://github.com/cmazakas/rio"
license = "BSL-1.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
nix = "0.26.2"
rustls = "0.20.8"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rustls-pemfile = "1.0.2"
webpki-roots = "0.22.6"
